--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper mt-lg-5">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/profile.png" alt="" />
+                <img class="profile" src="assets/images/profile.png" alt="Jenice Vazquez" style="width: 100%; border-radius: 100px" />
                 <h1 class="name">Jenice Vazquez</h1>
                 <h3 class="tagline">Desarrolladora Web Full Stack</h3>
             </div><!--//profile-container-->
