--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
                     <li class="email"><i class="fa-solid fa-envelope"></i><a href="mailto: jenice.vazquez@hotmail.com">jenice.vazquez@hotmail.com</a></li>
                     <li class="phone"><i class="fa-solid fa-phone"></i><a href="tel:+52 656 399 6595">+52 656 399 6595</a></li>
                     <li class="website"><i class="fa-solid fa-globe"></i><a href="https://jenicevazquez.com" target="_blank">jenicevazquez.com</a></li>
-                    <li class="linkedin"><i class="fa-brands fa-linkedin-in"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>
+                    <li class="linkedin"><i class="fa-brands fa-linkedin-in"></i><a href="#" target="_blank">linkedin.com/in/jenice-vazquez</a></li>
                     <li class="github"><i class="fa-brands fa-github"></i><a href="#" target="_blank">github.com/jenicevazquez</a></li>
-                    <li class="twitter"><i class="fa-brands fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
