--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">   
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/orbit-1.css">
-</head> 
+    <link id="mytheme-style" rel="stylesheet" href="assets/css/mytheme.css">
+</head>
 
 <body>
     <div class="wrapper mt-lg-5">
