--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <h3 class="job-title">Cofundadora y Directora de Tecnologia</h3>
                             <div class="time">2019 - Present</div>
                         </div><!--//upper-row-->
-                        <div class="company">R&V Consultores</div>
+                        <div class="company">R&V Consultores, Mexico</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>Responsable de la estrategia tecnológica, esto incluye la investigación y desarrollo de nuevas tecnologías, la implementación y
@@ -101,14 +101,36 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Senior Software Engineer</h3>
-                            <div class="time">2018 - 2022</div>
+                            <h3 class="job-title">Coordinadora de Ing. de Software Logistica</h3>
+                            <div class="time">2017 - 2019</div>
                         </div><!--//upper-row-->
-                        <div class="company">Google, London</div>
+                        <div class="company">Aduanasoft, Mexico</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>  
+                        <p>Supervisar y coordinar el desarrollo y la implementación de sistemas de software trabajando
+                            con equipos de ingenieros de software para desarrollar sistemas de software logisticos,
+                            así como coordinar la implementación de estos sistemas.
+                            Seguimiento y evaluación del rendimiento de los sistemas de software y en la identificación
+                            y resolución de problemas o errores en su funcionamiento. </p>
                         
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Programadora web</h3>
+                            <div class="time">2011 - 2017</div>
+                        </div><!--//upper-row-->
+                        <div class="company">E-consulting, Mexico</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Desarrollar y mantener sitios web y aplicaciones web.
+                            Esto incluye la implementación de diseños visuales en lenguajes de programación como HTML, CSS y JavaScript,
+                            así como la creación de funcionalidades en la aplicación utilizando PHP como lenguaje de programación.
+                            Diseñar y gestionar la base de datos de aplicaciones web y e implementación de medidas de seguridad
+                            para proteger la información almacenada en ella. </p>
+
                     </div><!--//details-->
                 </div><!--//item-->
 
