--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
         <div class="main-wrapper">
             
             <section class="section summary-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-user"></i></span>Career Profile</h2>
+                <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-user"></i></span>Acerca de mi</h2>
                 <div class="summary">
-                    <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/orbit-free-resume-cv-bootstrap-theme-for-developers/" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+                    <p>Soy una programadora web con experiencia en el desarrollo de aplicaciones web utilizando el framework Laravel. Actualmente soy cofundadora y directora de tecnología de R&V Consultores, una empresa dedicada al desarrollo de sistemas web especializados en comercio exterior y temas fiscales. Tengo habilidades en el uso de PHP, HTML, CSS, JavaScript, SQL Server y Git para crear sitios web dinámicos y funcionales.</p>
+
+                    <p>He trabajado en varios proyectos utilizando Laravel, desde la implementación de bases de datos hasta la integración de APIs. También tengo experiencia en el trabajo en equipo y en la resolución de problemas técnicos. Además, conozco los conceptos básicos de comercio exterior y he utilizado webservices de VU y timbrado de facturas en algunos proyectos. Estoy dispuesta a adaptarme a nuevas tecnologías y seguir aprendiendo en el ámbito de la programación web.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             
