--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2 class="container-block-title">Educación</h2>
                 <div class="item">
                     <h4 class="degree">Ing. en Sistemas Computacionales</h4>
-                    <h5 class="meta">Instituto Tecnologico de Cd. Juarez</h5>
+                    <h5 class="meta">Instituto Tecnológico de Cd. Juárez</h5>
 	                    <div class="time">2006 - 2011</div>
                 </div><!--//item-->
             </div><!--//education-container-->
@@ -87,7 +87,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Cofundadora y Directora de Tecnologia</h3>
+                            <h3 class="job-title">Cofundadora y Directora de Tecnología</h3>
                             <div class="time">2019 - Present</div>
                         </div><!--//upper-row-->
                         <div class="company">R&V Consultores, Mexico</div>
@@ -103,14 +103,14 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Coordinadora de Ing. de Software Logistica</h3>
+                            <h3 class="job-title">Coordinadora de Ing. de Software Logística</h3>
                             <div class="time">2017 - 2019</div>
                         </div><!--//upper-row-->
                         <div class="company">Aduanasoft, Mexico</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>Supervisar y coordinar el desarrollo y la implementación de sistemas de software trabajando
-                            con equipos de ingenieros de software para desarrollar sistemas de software logisticos,
+                            con equipos de ingenieros de software para desarrollar sistemas de software logísticos,
                             así como coordinar la implementación de estos sistemas.
                             Seguimiento y evaluación del rendimiento de los sistemas de software y en la identificación
                             y resolución de problemas o errores en su funcionamiento. </p>
@@ -209,7 +209,6 @@
 
     <footer class="footer">
         <div class="text-center">
-            <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
             <small class="copyright">Designed with <i class="fa-solid fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
         </div><!--//container-->
     </footer><!--//footer-->
